<?xml version="1.0"?>
<package format="3">
  <name>pose_publisher</name>
  <version>0.0.0</version>
  <description>Pose publisher package</description>
  <maintainer email="trakyalilter@gmail.com">ilter</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
